--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "name": "ReyyFileSharing2",
-  "description": "BOT Multi Force Subs File Sharing Bot berguna untuk menyimpan file dan dapat diakses melalui link khusus",
+  "name": "Bagi Bagi Bot",
+  "description": "BOT Multi Force Subs Bagi Bagi berkas berguna untuk menyimpan file dan dapat diakses melalui link khusus",
   "keywords": [
     "telegram",
-    "file",
-    "sharing"
+    "Berkas",
+    "Berbagi"
   ],
-  "repository": "https://github.com/ReyyNada/ReyyFileSharing2",
+  "repository": "https://github.com/JagoanRedesign/bagi-bagi-bot",
   "logo": "https://telegra.ph/file/c7af861c69985c2056a1e.jpg",
   "env": {
     "TG_BOT_TOKEN": {
